data/derived/comb/progs/unify/prog7927.ml.out
Characters 228-229:
  | Average (expr1, expr2) -> (((eval (expr1, x, y) +. eval(expr2, x, y))) /. 2)
                                                                              ^
Error: This expression has type int but an expression was expected of type
         float
